Changes in code and OAS
